--- a/views/login.html
+++ b/views/login.html
@@ -1,21 +1,17 @@
 <center>
-  <div class="well" ng-if="active">
-    <div class="page-header"><h1>Sign In</h1></div>
-    <form>
-      <div class="input-group input-group-lg">
-        <input type="text" class="form-control" placeholder="E-mail" ng-model="user.email" /><br />
-        <input type="password" class="form-control" placeholder="Password" ng-model="user.password" /><br />
-      </div>
-      <br />
-      <input class="btn btn-primary btn-lg" type="submit" ng-click="authenticate(user)" value="Sign In" />
-    </form>
+  <div ng-if="!auth">
+    <div><br><br><br></div>
+      <img src="img/acmelogo.png"></img>
+      <br><br>
+      <form style="width: 25%;">
+          <input type="text" style="border:none;" class="form-control" placeholder="Username" ng-model="user.email" /><br>
+          <input type="password" style="border:none;" class="form-control" placeholder="Password" ng-model="user.password" /><br>
+        <br />
+        <input class="btn btn-primary btn-lg" type="submit" ng-click="authenticate(user)" style="background-color: white; color:#E82D50; border:none;" value="Sign In" />
+      </form>
   </div>
-  <br><br>
-  <button ng-if="!active" ng-click="login()">Login</button>
 </center>
 
 <style>
-  body {
-    background-color: #E82D50
-  }
+  body {  background-color: #E82D50; }
 </style>
