--- a/views/schedule.html
+++ b/views/schedule.html
@@ -8,7 +8,7 @@
           	<!-- Right Justified Nav -->
           	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             	<ul class="nav navbar-nav navbar-right">
-              		<li> <a href="#/" style="font-size:20px; color:white;">Home</a></li>
+              		<li> <a href="#/" style="font-size:20px; color:white;">{{tokens.idToken.claims.name}}</a></li>
               		<li ng-if="!session"> <td style="padding:30px;"> <a href="#/login" ng-click="signout()" style="font-size:20px; color:white;">Login</a></li>
               		<li ng-if="session"> <td style="padding:30px;"> <a href="#/login" ng-click="signout()" style="font-size:20px; color:white;">Sign Out</a></li>
             	</ul>
@@ -17,28 +17,72 @@
     </nav>
 </header>
 <br><br>
-<div class="row" ng-if="auth">
-	<div class="col-md-3"><br />
-		<ul ng-repeat="(key, date) in sorted">
-			{{key}}
+<div class="row" ng-if="auth && sorted">
+	<div class="col-md-4" style="background-color: white; border: 1px solid gray;"><br />
+		<ul ng-repeat="(key, date) in sorted" style="list-style: none;">
+			{{key}} <br><br>
 			<!-- {{date | date: 'MMMM'}} -->
 			<li ng-repeat="(key, val) in date | limitTo:1" ng-click="updateAppointmentList(key)">
-				{{key | date:'MMMM'}} - {{val.length}}
+				<table style="width: 100%">
+					<tr>
+						<td><div class="circle"> {{key | date: 'dd'}}</div></td>
+						<td> {{key | date: 'EEEE'}} </td>
+						<td ng-if="val.length > 1"> {{val.length}} Appointments </td>
+						<td ng-if="val.length == 1"> {{val.length}} Appointment </td>
+					</tr>
+				</table>
 			</li>
 		</ul>
 	</div>
 	<div class="col-md-1"></div>
-	<div class="col-md-8">
+	<div class="col-md-6">
 		<br><br>
-		<ul ng-repeat="appointment in appointments">
-			Time: {{appointment.startTime | date:'hh:mma'}} <br> 
-			Reason for visit: {{appointment.comment}} <br>
+		<ul ng-repeat="appointment in appointments" style="background-color: white; border: 5px solid gray; box-shadow: 10px 10px 5px grey;">
+			<div class="box">{{appointment.startTime | date:'hh:mma'}}</div>
+			<br>
+			<table style="width:100%">
+				<tr><td style="color:gray; text-transform: uppercase;">Patient Name</td> <td> <b>{{appointment.patient}}</b> <br></td></tr>
+				<tr><td style="color:gray; text-transform: uppercase;">Reason for visit </td> <td>{{appointment.comment}} <br></td></tr>
+			</table>
+			<br><br>
 		</ul>
+		<div ng-show="!appointments.length">
+      		No current requests
+    	</div>
+		<br>
 	</div>
-
+	<div class="col-md-1"></div>
 </div>
 
 <div ng-if="!auth">
 	<br />
 	<h3> Please <a href="#/login"> Sign in to continue</a></h3>
 </div>
+
+<style>
+  body {
+    background-color: #fafafa
+  }
+
+  .circle
+	{
+	width:50px;
+	height:50px;
+	border-radius:50%;
+	font-size:20px;
+	color:#fff;
+	line-height:50px;
+	text-align:center;
+	background:#000
+	}
+
+	.box {
+    background-color: #E82D50;
+    width: 100px;
+    text-align:center;
+    color: white;
+    border: 1px solid gray;
+    padding: 0px;
+    margin: 0px;
+}
+</style>
