Added config file

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -61,7 +61,6 @@
 </div>
 <div class="AppBody">
   	<div class="Wrap" ng-show="!appointments.length">
-		<br><br><center>No <b>confirmed</b> requests
-		{{tokens.accessToken | json}}</center>
+		<br><br><center>No <b>confirmed</b> requests</center>
     </div>
 </div>
