--- a/views/requests.html
+++ b/views/requests.html
@@ -35,7 +35,7 @@
           </div>
           <div class="AppointmentCard-label">Provider</div>
           <div class="AppointmentCard-description">
-            <strong>{{req.provider}}</strong>
+            <strong>Dr. {{idToken.claims.name}}</strong>
           </div>
           <div class="AppointmentCard-label">Reason for Visit</div>
           <div class="AppointmentCard-description">
