--- a/views/schedule.html
+++ b/views/schedule.html
@@ -22,44 +22,50 @@
     </div>
 </header>
 
-<div class="AppSidebar" >
-  	<div class="AppSidebar-widget ScheduleWidget" ng-show="sorted">
-  		<ul ng-repeat="(key, date) in sorted">
-	  		<h3 class="ScheduleWidget-title" >{{key}}</h3>
-  			<li class="ScheduleWidget-items" ng-repeat="(key, val) in date | limitTo:1" ng-click="updateAppointmentList(key)">
-  				<a>
-  					<div class="ScheduleWidget-date">{{key | date: 'dd'}} </div>
-  					<div class="ScheduleWidget-label">{{key | date: 'EEEE'}}</div>
-  					<div class="ScheduleWidget-action" ng-if="val.length > 1">{{val.length}} appointments </div>
-  					<div class="ScheduleWidget-action" ng-if="val.length == 1">{{val.length}} appointment </div>
-  				</a>
-  			</li>
-  	    </ul>
+
+<div ng-if="appointments">
+  <div class="AppSidebar">
+    	<div class="AppSidebar-widget ScheduleWidget" ng-show="sorted">
+    		<ul ng-repeat="(key, date) in sorted">
+  	  		<h3 class="ScheduleWidget-title" >{{key}}</h3>
+    			<li class="ScheduleWidget-items" ng-repeat="(key, val) in date | limitTo:1" ng-click="updateAppointmentList(key)">
+    				<a>
+    					<div class="ScheduleWidget-date">{{key | date: 'dd'}} </div>
+    					<div class="ScheduleWidget-label">{{key | date: 'EEEE'}}</div>
+    					<div class="ScheduleWidget-action" ng-if="val.length > 1">{{val.length}} appointments </div>
+    					<div class="ScheduleWidget-action" ng-if="val.length == 1">{{val.length}} appointment </div>
+    				</a>
+    			</li>
+    	    </ul>
+    	</div>
+  </div>
+
+  <div class="AppBody">
+  	<div class="Wrap" >
+  		<!-- Start Appointment Card -->
+  		<div class="AppointmentCard" ng-repeat="appointment in appointments">
+  			<div class="AppointmentCard-time">{{appointment.startTime | date:'hh:mm a'}}</div>
+  			<a class="AppointmentCard-menuToggle" href="#"></a>
+  			<div class="AppointmentCard-content">
+  				<div class="AppointmentCard-label">Patient Name</div>
+  				<div class="AppointmentCard-description">
+  					<strong>{{appointment.patient}}</strong>
+  				</div>
+  				<div class="AppointmentCard-label">Reason for Visit</div>
+  				<div class="AppointmentCard-description">
+  					<p>{{appointment.comment}}</p>
+  				</div>
+  			</div>
+  		</div>
+  		<!-- End Appointment Card -->
+  		</div>
   	</div>
+  </div>
 </div>
-<div class="AppBody">
-	<div class="Wrap" ng-show="appointments.length">
-		<!-- Start Appointment Card -->
-		<div class="AppointmentCard" ng-repeat="appointment in appointments">
-			<div class="AppointmentCard-time">{{appointment.startTime | date:'hh:mm a'}}</div>
-			<a class="AppointmentCard-menuToggle" href="#"></a>
-			<div class="AppointmentCard-content">
-				<div class="AppointmentCard-label">Patient Name</div>
-				<div class="AppointmentCard-description">
-					<strong>{{appointment.patient}}</strong>
-				</div>
-				<div class="AppointmentCard-label">Reason for Visit</div>
-				<div class="AppointmentCard-description">
-					<p>{{appointment.comment}}</p>
-				</div>
-			</div>
-		</div>
-		<!-- End Appointment Card -->
-		</div>
-	</div>
-</div>
-<div class="AppBody">
-  	<div class="Wrap" ng-show="appointments.length === 0">
-		<br><br><center>No <b>confirmed</b> requests</center>
-    </div>
+<div ng-if="!appointments">
+  <div class="AppBody" style="margin-left:-360px;">
+    	<div ng-show="!appointments">
+  		<br><br><center>No <b>confirmed</b> requests<center>
+      </div>
+  </div>
 </div>
