Updated config file and methods for confirm/cancel

--- a/views/requests.html
+++ b/views/requests.html
@@ -43,17 +43,11 @@
           </div>
         
         </div>
-
         <!-- // Provider view -->
-        <div class="AppointmentCard-actions" ng-show="idToken.claims.groups.indexOf('Providers') >= 0">
+        <div class="AppointmentCard-actions" ng-show="accessToken.scopes.indexOf('appointments:write') >= 0">
           <a class="Button--greenOutline" href="#">Suggest new time</a>
           <a class="Button--green" ng-click="confirmAppointment(req)">Confirm</a>
           <a class="Button--gray" ng-click="cancelAppointment(req)">Cancel</a>
-        </div>
-
-        <!-- // Patient view -->
-        <div class="AppointmentCard-actions" ng-show="idToken.claims.groups.indexOf('Patients') >= 0">
-          <a class="Button--gray" ng-click="deleteAppointment(req)">Cancel</a>
         </div>
 
         <!-- // Read-only view -->
